Sun Aug  4 14:25:09 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* README: Relocation work is done.

	src:
	* m_cpu.c (m_movw_movt_mov32): Add relocation support.
	* reloc.c (Reloc_SplitRelocAndAddend): Add extra ValueInt case.

	unittests/reloc:
	* src/reloc_mov32.s: Add.
	* ref/reloc_mov32_elf.txt: Add.
	* ref/reloc_mov32_aof: Add.

Sun Aug  4 14:19:31 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpumem.c (dstmem): Reposition instrOffset assignment.

Sun Aug  4 14:10:25 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/put.c (Put_Ins_MOVW_MOVT): Add deprecated and unpredictable
	tests.

Sun Aug  4 13:58:04 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/fix.c (Fix_Int): Output value in hex notation as well in error
	message.  Rename parameters.
	* src/fix.h (Fix_Int): Rename parameters.

Sat Jul 20 19:46:11 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* reloc.c (Reloc_SplitRelocAndAddend): Add.
	* reloc.h (RelocAndAddend_t, Reloc_SplitRelocAndAddend): Add.
	* eval.c (GetInt): Support absolute area symbols.
	(GetValueAddrEquivalent): Add.
	(Eval_Unop): Reimplement :BASE: and :INDEX: using
	GetValueAddrEquivalent.  Explict support absolute area symbol in :STR:.
	* m_cpuctrl.c (GetBranchLabel): Make use of Area_CurIdxAligned.
	(ADRInstrType_e, CanSwitch_e): Add.
	(ADR_RelocUpdaterCore): Make use of CanSwitch_e.
	(m_adr): Make use of Reloc_SplitRelocAndAddend.
	* help_cop.c (HelpCop_Addr): Make use of Reloc_SplitRelocAndAddend.
	* m_cpumem.c (dstmem): Likewise.
	* directive_data.c (DefineInt_HandleSymbols): Follow Value_ResolveSymbol
	API change.
	* area.c, area.h (Area_CurIdxAligned): Add.
	* value.c, value.h (Value_IsLabel): Add.
	(Value_ResolveSymbol): Add resolveAbsArea parameter.
	* expr.c (Expr_GetPrim): For LexPosition, don't make an exception
	for absolute area symbols.
	* symbol.c (c_import): Drop absolute symbol attribute for based
	import symbols.
	* code.c (Code_EvalLowest): Add legal parameter.  Follow