@@ -1125,7 +1125,7 @@ Eval_Unop (Operator_e op, const Value *value)
 		}
 	      if (ccode >= 16)
 		ccode += -16 + 2;
-	      result = Value_Int (ccode << 24, eIntType_PureInt);
+	      result = Value_Int (ccode << 28, eIntType_PureInt);
 	    }
 	  break;
 	}
